<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Transaction Authentication</string>
    <string name="stringGetBarcode">Get QR Code</string>
    <string name="stringValidate">Validate code</string>
    <string name="stringCode">or paste code here</string>
    <string name="stringResults">Destination account number is: %1$d\nAmount to be transfered: %2$.2f\nPlease enter pin %3$d to verify transaction</string>
    <string name="demoCode">Demo code</string>
    <string name="install_dialog_title">Install barcode scanner?</string>
    <string name="install_dialog_message">To scan barcodes containing keys, you must install the ZXing barcode scanner.</string>
    <string name="install_button">Install</string>
    <string name="cancel">Cancel</string>
    <string name="key_data">Key data</string>
    <string name="prefs">Preferences</string>
    <string name="config_button">Configure keys</string>
    <string name="delete_button">Delete</string>
    <string name="add_key">Add new key</string>
    <string name="enter_key_id">Enter key id</string>
    <string name="enter_id_hint">integer</string>
    <string name="enter_key_label">Enter key</string>
    <string name="enter_key_hint">Enter your key</string>
    <string name="submit_button">Save</string>
    <string name="done">Done</string>
    <string name="delete_message">Delete this key?</string>
    <string name="yes">Yes</string>

</resources>
