<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip" >

        <Button
            android:id="@+id/buttonGetBarcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stringGetBarcode"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonGetDemo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/demoCode"
            android:textSize="20sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/editCode"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="top"
        android:hint="@string/stringCode" />

    <Button
        android:id="@+id/buttonValidate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stringValidate"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonKeys"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/config_button"
        android:textSize="20sp" />

</LinearLayout>